  * patches/any/submitted-sched_h.diff: Synchronize bits/sched.h with
    sysdeps/unix/sysv/linux/bits/sched.h (Closes: #527589), rename to
    cvs-sched_h.diff.
  * patches/hurd-i386/cvs-if_freereq.diff: Fix crash when siocgifconf
    actually succeeds.

  [ Clint Adams ]
  * Patch from Nobuhiro Iwamatsu to cope with the removal of
    patch --unified-reject-files.  closes: #612540.

 -- Clint Adams <clint@debian.org>  Tue, 08 Feb 2011 22:29:28 -0500

eglibc (2.11.2-11) unstable; urgency=low

  * patches/kfreebsd/local-sysdeps.diff: remove stub marks for at* 
    syscalls as we don't support FreeBSD 7.x kernels anyway.  Closes: 
    #610749.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 31 Jan 2011 21:02:31 +0100

eglibc (2.11.2-10) unstable; urgency=low

  * Add patches/amd64/cvs-avx-tcb-alignment.diff from upstream to fix 
    alignement issues on CPU supporting the AVX instruction set. Closes:
    #610657.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 23 Jan 2011 19:54:44 +0100

eglibc (2.11.2-9) unstable; urgency=low

  * Disable build failure in case of testsuite regressions, will be 
    re-enabled after squeeze release.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 20 Jan 2011 12:44:11 +0100

eglibc (2.11.2-8) unstable; urgency=low

  [ Clint Adams ]
  * Japanese debconf translation update from Nobuhiro Iwamatsu.
    closes: #604752.

  [ Samuel Thibault ]
  * Add expected gettext failure on hurd-i386.

  [ Aurelien Jarno ]
  * Update patches/localedata/locale-et_EE.diff to switch Estonian currency
    to euro. Closes: #608803.
  * Revert incorrect upstream patch for CVE-2010-3847 and use the correct
    set of patches:
    - Remove patches/any/submitted-origin.diff
    - Add patches/any/cvs-dont-expand-dst-twice.diff
    - Add debian/patches/any/cvs-ignore-origin-privileged.diff
    - Keep debian/patches/any/cvs-audit-suid.diff

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 12 Jan 2011 15:32:15 +0100

eglibc (2.11.2-7) unstable; urgency=low
