@@ -1,3 +1,6 @@
+2011-02-08  Steve Langasek  <steve.langasek@ubuntu.com>
+	* elf/Makefile: use the correct path in the ldd script as well
+
 2006-01-21  Aurelien Jarno  <aurel32@debian.org> 
 
 	* Makeconfig: new configuration variable rtlddir to change the
@@ -14,7 +17,7 @@
 
 --- a/Makeconfig
 +++ b/Makeconfig
-@@ -212,6 +212,11 @@
+@@ -202,6 +202,11 @@
  endif
  inst_slibdir = $(install_root)$(slibdir)
  
@@ -26,7 +29,7 @@
  # Prefix to put on files installed in $(libdir).  For libraries `libNAME.a',
  # the prefix is spliced between `lib' and the name, so the linker switch
  # `-l$(libprefix)NAME' finds the library; for other files the prefix is
-@@ -488,7 +493,7 @@
+@@ -486,7 +491,7 @@
  endif
  ifndef config-LDFLAGS
  ifeq (yesyes,$(build-shared)$(elf))
@@ -46,3 +49,12 @@
  		  -DNOT_IN_libc=1
  $(objpfx)interp.os: $(common-objpfx)config.make
  
+@@ -423,7 +423,7 @@
+ endif
+ 
+ 
+-common-ldd-rewrite = -e 's%@RTLD@%$(slibdir)/$(rtld-installed-name)%g' \
++common-ldd-rewrite = -e 's%@RTLD@%$(rltddir)/$(rtld-installed-name)%g' \
+ 		     -e 's%@VERSION@%$(version)%g' \
+ 		     -e 's%@PKGVERSION@%$(PKGVERSION)%g' \
+ 		     -e 's%@REPORT_BUGS_TO@%$(REPORT_BUGS_TO)%g'
