@@ -89,6 +89,7 @@ includedir=$(prefix)/include
 docdir=$(prefix)/share/doc
 mandir=$(prefix)/share/man
 sbindir=$(prefix)/sbin
+rtlddir=/lib
 slibdir=/lib
 libdir=/usr/lib
 
