@@ -10,5 +10,4 @@ alphaev67_add-ons = ports nptl $(add-ons)
 alphaev67_configure_target = alphaev67-linux-gnu
 alphaev67_extra_cflags = -mcpu=ev67 -mtune=ev67 -O2
 alphaev67_extra_config_options = $(extra_config_options) --disable-profile
-alphaev67_rtlddir = /lib
 alphaev67_slibdir = /lib/ev67
