@@ -18,7 +18,6 @@ i386_CXX = $(CC) -m32
 i386_extra_cflags = -march=pentium4 -mtune=generic
 i386_extra_config_options = $(extra_config_options)
 i386_includedir = /usr/include/i486-linux-gnu
-i386_rtlddir = /lib
 i386_slibdir = /lib32
 i386_libdir = /usr/lib32
 
