@@ -9,7 +9,7 @@ sparcv9b_configure_target=sparc64b-linux-gnu
 sparcv9b_configure_build=sparc64b-linux-gnu
 sparcv9b_extra_cflags = -mcpu=ultrasparc3
 sparcv9b_extra_config_options = $(extra_config_options) --disable-profile
-sparcv9b_rtlddir = /lib
+sparcv9b_rtlddir = /lib64
 sparcv9b_slibdir = /lib/ultra3
 
 # /lib64 and /usr/lib64 are provided by glibc instead base-files: #259302.
